added vaidations to new book

--- a/app/views/books/new.html.slim
+++ b/app/views/books/new.html.slim
@@ -17,7 +17,7 @@
                 = f.label :description
                 = f.input_field :desc, class: 'form-control'
             .form-group
-                = f.label :short_Description
+                = f.label 'Short Description'
                 = f.input_field :short_desc, class: 'form-control'
             .form-group
                 = f.submit 'Add Book', class: 'btn btn-primary'
